--- a/catlog-info.yaml
+++ b/catlog-info.yaml
@@ -4,6 +4,7 @@ metadata:
   name: TestData
 annotations:
   confluence/page: TestData
+  backstage.io/techdocs-ref: dir:.
 spec:
   type: service
   owner: 'admin'
